Updated to Korean chips

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<div id='container'>
-		<div class='title'>Welcome to Chris's Uncrustacounter</div> <br>
-		<div class='counter'># of Uncrustables remaining: <span class='num'>0</span></div>
+		<div class='title'>Welcome to Christine's Korean turtle counter</div> <br>
+		<div class='counter'># of Korean Turtles remaining: <span class='num'>5</span></div>
 		<!-- <button class='less' onclick="less()">Less</div>
 		<button class='more' onclick="more()">More</div> -->
 	</div>
