--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id='container'>
-		<div class='title'>Welcome to Christine's Korean turtle counter</div> <br>
+		<div class='title'>Welcome to Christine's Korean Turtle counter</div> <br>
 		<div class='counter'># of Korean Turtles remaining: <span class='num'>3</span></div>
 		<!-- <button class='less' onclick="less()">Less</div>
 		<button class='more' onclick="more()">More</div> -->
