--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id='container'>
 		<div class='title'>Welcome to Christine's Korean Turtle counter</div> <br>
-		<div class='counter'># of Korean Turtles remaining: <span class='num'>1</span></div>
+		<div class='counter'># of Korean Turtles remaining: <span class='num'>0<br>Stay tuned for more Korean Turtle news!</span></div>
 		<!-- <button class='less' onclick="less()">Less</div>
 		<button class='more' onclick="more()">More</div> -->
 	</div>
